crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__if__missing_orelse_expr_1.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/if/missing_orelse_expr_1.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..76,
        body: Suite {
            range: 0..76,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 55..69,
                        value: If(
                            ExprIf {
                                node_index: NodeIndex(None),
                                range: 55..69,
                                test: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 60..64,
                                        id: Name("expr"),
                                        ctx: Load,
                                    },
                                ),
                                body: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 55..56,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                orelse: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 69..69,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 71..76,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 71..76,
                                left: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 71..72,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                op: Add,
                                right: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 75..76,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | # Missing orelse expression, followed by an expression
2 | x if expr else
  |               ^ Syntax Error: Expected an expression
3 |
4 | 1 + 1
  |
